--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <body>
     <div class="app-container">
         <header>
-            <h1>Sudoku</h1>
+            <div class="header-top">
+                <h1>Sudoku</h1>
+                <div class="game-stats">
+                    <span id="timer">00:00</span>
+                    <span id="mistakes">오류: 0/3</span>
+                </div>
+            </div>
             <div class="controls">
                 <select id="difficulty-select">
                     <option value="easy">쉬움</option>
